# JSTprove

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  README.md  benchmark_runner.py  cli.py  conftest.py  extrema.txt  extrema_witness.txt  extrema_witness_solver.txt  input.json  matmul_bias_circuit.txt  matmul_bias_circuit_witness_solver.txt  matmul_bias_witness.txt  matmul_circuit.txt  matmul_circuit_witness_solver.txt  matmul_witness.txt  matrix_addition_circuit.txt  matrix_addition_circuit_witness_solver.txt  matrix_addition_witness.txt  output.json  pyproject.toml  pytest.ini  requirements.txt  rustfmt.toml  setup.py  simple_circuit_circuit.txt  simple_circuit_proof.txt  simple_circuit_witness.txt  simple_circuit_witness_solver.txt  transaction_dataset.csv  witness.txt
ExpanderCompilerCollection/expander_compiler/: Cargo.toml
ExpanderCompilerCollection/expander_compiler/tests/: testing_template.rs  to_binary_unconstrained_api.rs
benchmarks/: bench.sh  (+1 more)
binius64/spartan-wrapper/: Cargo.toml
binius64/spartan-wrapper/src/: build_elem.rs  channel.rs  lib.rs
binius64/verifier/: Cargo.toml
binius64/verifier/src/: config.rs  error.rs  ring_switch.rs  verify.rs
binius64/verifier/src/and_reduction/: verifier.rs
binius64/verifier/src/protocols/: mod.rs  pubcheck.rs
gravy_circuits/: Cargo.toml  relu_twos_comp.rs  test.rs  testing.rs
gravy_circuits/cli/: simple_circuit_cli.py
gravy_circuits/src/: convolution_fn.rs  helper_fn.rs  io_reader.rs  lib.rs  main_runner.rs  matrix_computation.rs  quantization.rs  relu.rs
gravy_circuits/src/circuit_functions/: conversion.rs  convolution_fn.rs  core_operations.rs  extrema.rs  helper_fn.rs  layer_operations.rs  matmul.rs  matrix_computation.rs  max_pooling.rs  mod.rs  pooling.rs  quantization.rs  range_check.rs  relu.rs
gravy_circuits/src/io/: io_reader.rs  mod.rs
gravy_circuits/src/runner/: main_runner.rs  mod.rs
model_analyzer/: Cargo.toml  docs.md
model_analyzer/src/: core.rs  lib.rs  model_analyzer.rs  pybindings.rs
model_analyzer/src/layer_handlers/: extact_params.rs  layer_helpers.rs  layer_ir.rs  mod.rs
prover/circuit/: Cargo.toml
prover/circuit/src/: ecc_circuit.rs  lib.rs  serde.rs
prover/circuit/src/layered/: circuit.rs  gates.rs  serde.rs
prover/circuit/tests/: circuit_serde.rs  shared_mem.rs
prover/config_macros/: Cargo.toml
prover/config_macros/src/: lib.rs
prover/crosslayer_prototype/: Cargo.toml
prover/crosslayer_prototype/src/: lib.rs  main.rs
prover/gkr/: Cargo.toml
prover/gkr/benches/: gkr_hashes.rs  gkr_square_pow5.rs
prover/gkr/examples/: metal_gkr_bench.rs
prover/gkr/src/: gkr_configs.rs  lib.rs  tests.rs  verifier.rs
prover/gkr_engine/: Cargo.toml
prover/gkr_engine/src/: field_engine.rs  lib.rs
prover/halo2curves/: .gitignore  Cargo.toml  build.rs
prover/halo2curves/src/: lib.rs  msm.rs
prover/hasher/: Cargo.toml
prover/hasher/src/: lib.rs
prover/jst_gkr/: Cargo.toml
prover/jst_gkr/benches/: comparison.rs  gkr_bench.rs
prover/jst_gkr/src/: lib.rs  mle.rs  prover.rs  sumcheck.rs  tests.rs  transcript.rs  verifier.rs
prover/metal_accel/: Cargo.toml  build.rs
prover/metal_accel/examples/: metal_bench.rs
prover/metal_accel/shaders/: eq_eval.metal  eq_eval_gl.metal  field_bn254.metal  field_goldilocks.metal  gate_accumulate.metal  poly_eval.metal  poly_eval_gl.metal  sumcheck_fold.metal  sumcheck_fold_gl.metal
prover/metal_accel/src/: buffers.rs  device.rs  kernels.rs  kernels_gl.rs  lib.rs
prover/poly_commit/: Cargo.toml
prover/poly_commit/benches/: hyrax.rs  kzg.rs  orion.rs  pcs_all.rs
prover/poly_commit/src/: lib.rs  utils.rs
prover/serdes/: Cargo.toml
prover/serdes/src/: lib.rs
prover/serdes_derive/: Cargo.toml
prover/serdes_derive/src/: lib.rs
prover/sumcheck/: BLENDY_ASSESSMENT.md  Cargo.toml
prover/sumcheck/benches/: simd_gate_poly_eval.rs
prover/sumcheck/src/: lib.rs  metal_sumcheck.rs  scratch_pad.rs  sumcheck.rs  verifier_helper.rs
prover/transcript/: Cargo.toml
prover/transcript/src/: byte_hash_transcript.rs  lib.rs
prover/tree/: Cargo.toml
prover/tree/benches/: tree.rs
prover/tree/src/: lib.rs  path.rs  tree.rs
prover/utils/: Cargo.toml
prover/utils/src/: lib.rs
rust/jstprove_binius/: Cargo.toml
rust/jstprove_binius/benches/: lenet_binius.rs  pipeline_binius.rs
rust/jstprove_binius/src/: circuit.rs  lib.rs  main.rs  prove.rs  verify.rs
rust/jstprove_circuits/: Cargo.toml  build.rs
rust/jstprove_circuits/benches/: autotuner_strategies.rs  conv_ntt_sweep.rs  gemm_300_256_memory.rs  layer_bench.rs  logup_chunking.rs  parallel_witness.rs  pipeline.rs  pipeline_comparison.rs  pipeline_ecc.rs  serialization.rs  slice_310_gemm.onnx  strassen_matmul.rs  winograd_conv.rs
rust/jstprove_circuits/src/: api.rs  cli.rs  curve.rs  expander_metadata.rs  hints.rs  lib.rs  onnx.rs  proof_config.rs  proof_system.rs  zkcuda_pipeline.rs
rust/jstprove_circuits/tests/: ecc_pipeline_e2e.rs  fast_compile_e2e.rs  holographic_benchmarks.rs  holographic_e2e.rs  sn2_contract.rs  topk_constraint_cost.rs  whir_benchmark.rs
rust/jstprove_conformance/: CONTRIBUTING.md  Cargo.toml
rust/jstprove_conformance/src/: fixtures.rs  lib.rs  onnx_builder.rs  runner.rs  tolerance.rs  tolerance_table.md
rust/jstprove_conformance/tests/: conformance.rs
rust/jstprove_direct_builder/: Cargo.toml
rust/jstprove_direct_builder/src/: lib.rs
rust/jstprove_io/: Cargo.toml
rust/jstprove_io/src/: bundle.rs  compress.rs  envelope.rs  lib.rs  version.rs
rust/jstprove_onnx/: Cargo.toml
rust/jstprove_onnx/proto/: onnx_ml.proto
rust/jstprove_onnx/src/: compat.rs  graph.rs  layer_params.rs  lib.rs  ops.rs  parser.rs  quantizer.rs  shape_inference.rs
rust/jstprove_remainder/: Cargo.toml  build.rs
rust/jstprove_remainder/benches/: pipeline.rs  pipeline_remainder.rs  serialization.rs
rust/jstprove_remainder/models/: cifar_cnn.onnx  clip_cnn.onnx  mini_resnet.onnx
rust/jstprove_remainder/src/: cli.rs  lib.rs  main.rs  padding.rs  tensor.rs  util.rs
rust/jstprove_remainder/tests/: e2e_tests.rs  lenet_dump.rs
(+1463 files in other folders)
