[workspace]
members = [
    "rust/jstprove_circuits",
]

resolver = "2"
exclude = ["ExpanderCompilerCollection", "rust/jstprove_remainder", "rust/jstprove_pyo3", ".claude"]

[workspace.dependencies]
rmpv = { version = "1", features = ["with-serde"] }
peakmem-alloc = "0.3.0"
csv = "1.1"
ark-std = "0.4.0"
rand = "0.8.5"
chrono = "0.4"
clap = { version = "4.1", features = ["derive"] }
ethnum = "1.5.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
halo2curves = { git = "https://github.com/PolyhedraZK/halo2curves", default-features = false, features = ["bits"] }

# ECC from inference-labs-inc
expander_compiler = { git = "https://github.com/inference-labs-inc/ecc", rev = "f858279" }
circuit-std-rs = { git = "https://github.com/inference-labs-inc/ecc", rev = "f858279" }
thiserror = "2.0.15"
strum = "0.27.2"
strum_macros = "0.27.2"
once_cell = "1.21.3"
openssl = { version = "0.10", features = ["vendored"] }
ndarray = { version = "0.16.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
zstd = "0.13.3"
