[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "jstprove"
version = "0.1.0"
description = "Zero-knowledge proofs of ML inference on ONNX models"
readme = "README.md"
authors = [{ name = "Inference Labs Inc" }]
requires-python = ">=3.9"

[tool.maturin]
manifest-path = "rust/jstprove_pyo3/Cargo.toml"
features = ["pyo3/extension-module"]
python-source = "pysrc"
module-name = "jstprove._native"

[dependency-groups]
dev = ["pytest>=7"]

[tool.pytest.ini_options]
testpaths = ["tests"]
