[package]
name = "gravy_circuits"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-std.workspace = true
rand.workspace = true
chrono.workspace = true
clap.workspace = true
ethnum.workspace = true
halo2curves.workspace = true
tiny-keccak.workspace = true
mpi_config.workspace = true
gkr_field_config.workspace = true
expander_config.workspace = true
expander_circuit.workspace = true
expander_transcript.workspace = true
gkr.workspace = true
arith.workspace = true
gf2.workspace = true
mersenne31.workspace = true
crosslayer_prototype.workspace = true
serde_json = "1.0"
peakmem-alloc = "0.3.0"
expander_compiler.workspace = true
lazy_static = "1.4"
circuit-std-rs.workspace = true

[dev-dependencies]
rayon = "1.9"
sha2 = "0.10.8"

[dependencies.serde]
version = "1.0"
features = [ "derive",]



# [[bin]]
# name = "testing"
# path = "bin/testing.rs"

[[bin]]
name = "relu_twos_comp"
path = "bin/circuit_components/relu_twos_comp.rs"

[[bin]]
name = "relu_dual"
path = "bin/circuit_components/relu_dual.rs"

[[bin]]
name = "matrix_addition"
path = "bin/circuit_components/matrix_addition.rs"

[[bin]]
name = "matrix_hadamard_product"
path = "bin/circuit_components/matrix_hadamard_product.rs"

[[bin]]
name = "matmul"
path = "bin/matmul_circuit.rs"

[[bin]]
name = "matmul_bias"
path = "bin/matmul_bias_circuit.rs"

[[bin]]
name = "extrema"
path = "bin/extrema_circuit.rs"
[[bin]]
name = "maxpooling"
path = "bin/maxpooling_circuit.rs"

[[bin]]
name = "scaled_matrix_product"
path = "bin/circuit_components/scaled_matrix_product.rs"

[[bin]]
name = "scaled_matrix_product_sum"
path = "bin/circuit_components/scaled_matrix_product_sum.rs"

[[bin]]
name = "gemm"
path = "bin/circuit_components/gemm.rs"

[[bin]]
name = "convolution"
path = "bin/circuit_components/convolution.rs"

[[bin]]
name = "doom"
path = "bin/doom.rs"

[[bin]]
name = "doom_2"
path = "bin/doom_2.rs"

[[bin]]
name = "eth_fraud"
path = "bin/eth_fraud.rs"

[[bin]]
name = "demo_cnn"
path = "bin/demo_cnn.rs"

[[bin]]
name = "simple_circuit"
path = "bin/simple_circuit.rs"

[[bin]]
name = "doom_conv1"
path = "bin/doom/doom_conv1.rs"

[[bin]]
name = "doom_conv2"
path = "bin/doom/doom_conv2.rs"

[[bin]]
name = "doom_conv3"
path = "bin/doom/doom_conv3.rs"

[[bin]]
name = "doom_fc1"
path = "bin/doom/doom_fc1.rs"
[[bin]]
name = "doom_fc2"
path = "bin/doom/doom_fc2.rs"

[[bin]]
name = "net"
path = "bin/net_model.rs"

[[bin]]
name = "net_conv1"
path = "bin/net/net_conv1.rs"

[[bin]]
name = "net_conv2"
path = "bin/net/net_conv2.rs"

[[bin]]
name = "net_fc1"
path = "bin/net/net_fc1.rs"

[[bin]]
name = "net_fc2"
path = "bin/net/net_fc2.rs"

[[bin]]
name = "net_fc3"
path = "bin/net/net_fc3.rs"

# [[bin]]
# name = "expander-exec"
# path = "gkr/src/expander-exec.rs"