[package]
name = "model_analyzer"
version = "0.1.0"
edition = "2021"

[lib]
name = "model_analyzer"
crate-type = ["cdylib"]

[dependencies]
tract-onnx = "0.19"
tract-core = "0.19"
pyo3 = { version = "0.25", features = ["extension-module"] }
thiserror = "2.0.12"

[package.metadata.maturin]
name = "model_analyzer"

[features]
default = ["python"]
python = ["pyo3/extension-module"]

[package.metadata.check-cfg]
features = ["python"]