[package]
name = "model_analyzer"
version = "0.1.0"
edition = "2021"

[lib]
name = "model_analyzer"
crate-type = ["cdylib"]

[dependencies]
tract-onnx = "0.21.13"
tract-core = "0.21.13"
tract-nnef = "0.21.13"
pyo3 = { version = "0.25", features = ["extension-module"] }
# numpy = "0.20"
# thiserror = "2.0.12"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"


[package.metadata.maturin]
name = "model_analyzer"

[features]
default = ["python"]
python = ["pyo3/extension-module"]

[package.metadata.check-cfg]
features = ["python"]