[[bin]]
name = "trivial_circuit"
path = "bin/trivial_circuit.rs"

[[bin]]
name = "testing"
path = "bin/testing.rs"

[[bin]]
name = "reward"
path = "bin/reward.rs"

[[bin]]
name = "comparison"
path = "bin/comparison.rs"

[[bin]]
name = "relu"
path = "bin/relu.rs"

[[bin]]
name = "gemm"
path = "bin/gemm.rs"

[[bin]]
name = "matrix_multiplication"
path = "bin/matrix_multiplication.rs"

[[bin]]
name = "scaled_matrix_product"
path = "bin/scaled_matrix_product.rs"

[[bin]]
name = "scaled_matrix_product_sum"
path = "bin/scaled_matrix_product_sum.rs"

[package]
name = "expander_compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
peakmem-alloc = "0.3.0"
csv = "1.1"

[dependencies.ark-std]
workspace = true

[dependencies.rand]
workspace = true

[dependencies.chrono]
workspace = true

[dependencies.clap]
workspace = true

[dependencies.ethnum]
workspace = true

[dependencies.halo2curves]
workspace = true

[dependencies.tiny-keccak]
workspace = true

[dependencies.expander_config]
workspace = true

[dependencies.expander_circuit]
workspace = true

[dependencies.gkr]
workspace = true

[dependencies.arith]
workspace = true

[dependencies.gf2]
workspace = true

[dependencies.mersenne31]
workspace = true

[dependencies.serde]
version = "1.0"
features = [ "derive",]
