[package]
name = "crosslayer_prototype"
description = "Cross-layer optimization prototype for Expander proof system"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arith.workspace = true
gkr_engine.workspace = true
gkr_hashers.workspace = true
polynomials.workspace = true
sumcheck.workspace = true
serdes.workspace = true
transcript.workspace = true

env_logger.workspace = true
ethnum.workspace = true
log.workspace = true
rand.workspace = true
thiserror.workspace = true

[lints.clippy]
all = "allow"
