[package]
name = "gkr_engine"
description = "GKR protocol engine for Expander proof system"
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arith.workspace = true
babybear.workspace = true
gf2.workspace = true
gf2_128.workspace = true
goldilocks.workspace = true
mersenne31.workspace = true
polynomials.workspace = true
serdes.workspace = true

thiserror.workspace = true
rand.workspace = true
itertools.workspace = true

[dev-dependencies]
ark-std.workspace = true

[features]
default = []
recursion = []
# grinding = [ "grinding" ]

[lints.clippy]
all = "allow"
