[package]
name = "expander-halo2curves"
description = "Elliptic curve implementations for Expander proof system (vendored from PolyhedraZK/halo2curves)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "MIT OR Apache-2.0"
repository.workspace = true
rust-version = "1.63.0"

[dependencies]
subtle = "2.5"
ff = { version = "0.13.0", default-features = false, features = ["std"] }
group = "0.13.0"
pairing = "0.23.0"
pasta_curves = "0.5.0"
static_assertions = "1.1.0"
rand = "0.8"
rand_core = { version = "0.6", default-features = false }
lazy_static = "1.4.0"
num-bigint = "0.4.3"
num-traits = "0.2"
paste = "1.0.11"
serde = { version = "1.0", default-features = false, optional = true }
serde_arrays = { version = "0.1.0", optional = true }
hex = { version = "0.4", optional = true, default-features = false, features = ["alloc", "serde"] }
rayon = "1.8"
unroll = "0.1.5"
blake2 = "0.10.6"
sha2 = "0.10.8"
digest = "0.10.7"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
rand_xorshift = "0.3"
ark-std = { version = "0.3" }
bincode = "1.3.3"
serde_json = "1.0.105"
hex = "0.4"
rand_chacha = "0.3.1"
impls = "1"

[features]
default = ["bits"]
asm = []
bits = ["ff/bits"]
derive_serde = ["serde/derive", "serde_arrays", "hex", "pasta_curves/serde"]
print-trace = ["ark-std/print-trace"]

[lints.clippy]
all = "allow"
