[package]
name = "gkr_hashers"
description = "Hash functions for Expander GKR protocol"
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arith.workspace = true
serdes.workspace = true


halo2curves.workspace = true
sha2.workspace = true
tiny-keccak.workspace = true

[lints.clippy]
all = "allow"
