[package]
name = "metal_accel"
description = "Metal GPU acceleration for Expander proof system"
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
log.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.29"
objc = "0.2"
block = "0.1"

[dev-dependencies]
halo2curves.workspace = true

[lints.clippy]
all = "allow"
