[package]
name = "serdes"
description = "Serialization framework for Expander proof system"
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
halo2curves.workspace = true
ethnum.workspace = true

serdes_derive.workspace = true

[dev-dependencies]
rand.workspace = true

[lints.clippy]
all = "allow"
