[package]
name = "serdes_derive"
description = "Derive macros for Expander serialization"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true

[lints.clippy]
all = "allow"
