[package]
name = "transcript"
description = "Fiat-Shamir transcript for Expander proof system"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arith.workspace = true
gkr_hashers.workspace = true
gkr_engine.workspace = true
serdes.workspace = true

sha2.workspace = true
tiny-keccak.workspace = true

[dev-dependencies]
mersenne31.workspace = true

[features]
recursion = []

[lints.clippy]
all = "allow"
