[package]
name = "tree"
description = "Merkle tree implementation for Expander proof system"
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arith.workspace = true
serdes.workspace = true

ark-std.workspace = true
tiny-keccak.workspace = true

[dev-dependencies]
criterion.workspace = true
tynm.workspace = true

gf2.workspace = true
gf2_128.workspace = true

[[bench]]
name = "tree"
harness = false

[lints.clippy]
all = "allow"
