[package]
name = "expander-utils"
description = "Utility functions for Expander proof system"
version.workspace = true
edition.workspace = true

[lib]
name = "utils"
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
colored = { version = "2.0.0", default-features = false, optional = true}

[features]
default = []
profile = [ "dep:colored" ]

[lints.clippy]
all = "allow"
