[package]
name = "jstprove_circuits"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-std.workspace = true
rand.workspace = true
chrono.workspace = true
clap.workspace = true
ethnum.workspace = true
halo2curves.workspace = true
tiny-keccak.workspace = true
rmpv.workspace = true
peakmem-alloc = { version = "0.3.0", optional = true }
expander_compiler.workspace = true
lazy_static = "1.4"
circuit-std-rs.workspace = true
ndarray.workspace = true
thiserror.workspace = true
strum.workspace = true
strum_macros.workspace = true
once_cell.workspace = true
openssl.workspace = true
zstd.workspace = true
rmp-serde = "1.3"
serde_bytes = "0.11"
num-bigint = "0.4"
num-traits = "0.2"
jstprove-io = { path = "../jstprove_io" }
jstprove-onnx = { path = "../jstprove_onnx" }
jstprove-remainder = { path = "../jstprove_remainder", optional = true }
jstprove-direct-builder = { path = "../jstprove_direct_builder" }
arith = { git = "https://github.com/inference-labs-inc/Expander", tag = "v0.3.1" }
anyhow = "1"
serde_json = "1.0"

[features]
peak-mem = ["peakmem-alloc"]
remainder = ["dep:jstprove-remainder"]

[dev-dependencies]
sha2 = "0.10.8"
serde_json = "1.0"
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
libc = "0.2"

[[bench]]
name = "serialization"
harness = false

[[bench]]
name = "pipeline_ecc"
harness = false

[dependencies.serde]
version = "1.0"
features = [ "derive",]

[[bin]]
name = "simple_circuit"
path = "bin/simple_circuit.rs"

[[bin]]
name = "jstprove"
path = "bin/generic_demo.rs"
