[package]
name = "jstprove-io"
description = "Serialization I/O for JSTprove zero-knowledge proofs"
version = "0.1.0"
edition = "2021"
authors = ["Inference Labs Inc"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/inference-labs-inc/JSTprove"

[dependencies]
serde = { version = "1", features = ["derive"] }
rmp-serde = "1.3"
zstd = "0.13"
crc32c = "0.6"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
