[package]
name = "jstprove-io"
description = "Serialization I/O for JSTprove zero-knowledge proofs"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
rmp-serde = "1.3"
zstd = "0.13"
crc32c = "0.6"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
