[package]
name = "jstprove-onnx"
description = "ONNX model parsing for JSTprove zero-knowledge proofs"
version = "0.1.0"
edition = "2021"
authors = ["Inference Labs Inc"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/inference-labs-inc/JSTprove"

[dependencies]
prost = "0.13"
anyhow = "1"
serde = { version = "1", features = ["derive"] }

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
tempfile = "3"
