[package]
name = "jstprove-onnx"
description = "ONNX model parsing for JSTprove zero-knowledge proofs"
version = "0.1.0"
edition = "2021"
publish = false
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
prost = "0.13"
anyhow = "1"
serde = { version = "1", features = ["derive"] }

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
tempfile = "3"
