[package]
name = "jstprove-remainder"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
frontend = { git = "https://github.com/inference-labs-inc/Remainder_CE.git", rev = "868c354b" }
remainder = { git = "https://github.com/inference-labs-inc/Remainder_CE.git", rev = "868c354b" }
shared-types = { git = "https://github.com/inference-labs-inc/Remainder_CE.git", rev = "868c354b" }
ligero = { git = "https://github.com/inference-labs-inc/Remainder_CE.git", rev = "868c354b" }
hyrax = { git = "https://github.com/inference-labs-inc/Remainder_CE.git", rev = "868c354b" }

prost = "0.13"
ndarray = { version = "0.15.6", features = ["serde"] }
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
zstd = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = "1.8"
itertools = "0.14"

[build-dependencies]
prost-build = "0.13"

[features]
parallel = [
    "frontend/parallel",
    "remainder/parallel",
]

[[bin]]
name = "jstprove-remainder"
path = "src/main.rs"
